...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/activate_alarm_button"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textOn="Deactivate"
                        android:textOff="Activate"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        set_alarm_button_enabled_state="@{alarmLiveData.alarmAvailableUntilEpochSeconds}"
                        android:checked="@{alarmLiveData.active}" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/watch_ad_button"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Watch Ad" />
                </LinearLayout>
...
