...
                android:text="@{skycam.location.name}"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/skycam_image_imageview"
                tools:text="Lyngen North" />

            <TextView
                android:id="@+id/last_update_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
...
